# beers

./: .env  Cargo.toml  docker-compose.yml
config/: default.yaml
migrations/: 20230728161807_create_beers_table.down.sql  20230728161807_create_beers_table.up.sql
src/: lib.rs  main.rs  settings.rs  startup.rs
src/routes/: beer.rs
